fixes alignment on messages inside statements list

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -152,6 +152,8 @@ input {
             overflow-x: hidden;
             height: 100%;
             padding: 5px 10px;
+            display: flex;
+            align-items: center;
 
             &::-webkit-scrollbar-track {
                 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
